# ic4-gstreamer

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  env.sh.in  vcpkg.json
cmake/: package-name.cmake  pkg_check_variable.cmake
doc/: CMakeLists.txt  conf.py.in  documentation.md  ic4-gst-helper.md  ic4src.md
doc/pages/: index.rst
libs/: CMakeLists.txt
libs/gst-helper/: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
libs/gst-helper/include/gst-helper/: gvalue_functions.h
libs/gst-helper/include/tcamprop1.0_base/: tcamprop_property_info.h  tcamprop_property_info_list.h  tcamprop_property_interface.h  tcamprop_property_list_impl.h  tcamprop_provider_interface_impl.h
libs/gst-helper/libs/: CMakeLists.txt
libs/gst-helper/src/: CMakeLists.txt
libs/gst-helper/src/gst-helper/: CMakeLists.txt
libs/gst-helper/src/tcamprop1.0_base/: CMakeLists.txt  tcamprop_property_info.cpp  tcamprop_property_info_list.cpp
libs/gst-helper/src/tcamprop1.0_consumer/: CMakeLists.txt
libs/gst-helper/src/tcamprop1.0_gobject/: CMakeLists.txt  tcam_propenumeration_impl.cpp  tcam_property_provider.cpp
libs/gst-helper/test/: CMakeLists.txt
libs/gst-helper/test/check-tcamprop/: CMakeLists.txt  cli-parser.cpp  cli-parser.h  main.cpp  stuff.cpp  stuff.h  tiscamera-property-list.xml  validate_prop_names.cpp  validate_prop_names.h
libs/gst-helper/test/gst-simple-appsink/: CMakeLists.txt  main.cpp
libs/gst-helper/test/lib/: CMakeLists.txt
libs/gst-helper/test/lib/gst_pipeline_helper/: appsink.h  gerror_wrapper.h  pipeline.h
libs/gst-helper/test/test-tcamcam/: CMakeLists.txt  tcampimipi_property_test.cpp
src/: CMakeLists.txt  format.cpp  format.h  gst_tcam_ic4_src.cpp  gst_tcam_ic4_src.h  ic4_device_state.cpp  ic4_device_state.h  ic4_gst_conversions.cpp  ic4_gst_conversions.h  ic4_tcam_property.cpp  ic4_tcam_property.h  ic4src_gst_device.cpp  ic4src_gst_device.h  ic4src_gst_device_provider.cpp  ic4src_gst_device_provider.h  tcamic4src_plugin.cpp
src/ic4-gstreamer-helper/: CMakeLists.txt  base_functions.cpp  base_functions.h  main.cpp  print_caps.cpp  print_caps.h
test/: CMakeLists.txt  caps_negotiation.cpp  main.cpp  test_caps_negotiation.cpp  test_device_monitor.cpp  test_helper.cpp  test_helper.h  test_properties.cpp
